# CRoS

./: .gitignore  CMakeLists.txt
CRoS/: CMakeLists.txt  CRoS.cpp  cros_algorithm.h  generate_data.h
app/cros/: CMakeLists.txt
app/cros/src/: cros.h  data_table.h  matrix_table.h  points.h  source.cpp  word_iterable.h
cmake/: colmap.cmake  eigen.cmake  json.cmake
cros/: CMakeLists.txt
